# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.623 2006/03/14 15:30:39 agaffney Exp $

  14 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  reorder minor numbers when loading partitions from disk to match the physical
  partition order

  13 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  overhaul for supporting mac disklabels and partitions out of disk order
  remove free space from inside extended partition when extended is removed

  13 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org> +bin/installer,
  +bin/installer-dialog, +bin/installer-gtk, +docs/gli.png,
  +docs/gli-dialog.png, +src/misc/installer-dialog.desktop,
  +src/misc/installer-faq.desktop, +src/misc/installer-gtk.desktop:
  Added bash scripts, icons, and desktop entries from the ebuild to make my
  life easier.

  10 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  raise an exception if the existing partitions are out of disk order
  look for minors out of order instead of disk position

  8 Mar 2006; Preston Cody <codeman@gentoo.org>
  src/fe/dialog/gli-dialog and src/GLIGenDialog:
  added networkless mode to gli-dialog.
  
  6 Mar 2006; Preston Cody <codeman@gentoo.org>
  src/templates/x86AT:
  add windows detection code for grub.  untested.
  
  6 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  bootloader and partitioning external commands log to compile_output.log
  wait for device node to exist before resizing
  add -v to ntfsresize command
  src/GLIStorageDevice.py:
  return start/end with ip structure
  pad min ntfs size by 50 MB just to be safe
  src/GLIArchitectureTemplate.py:
  only install filesystem tools for partitions with a mountpoint

  5 Mar 2006; Preston Cody <codeman@gentoo.org>
  add error catching and text to saving profile dialogs
